--- a/package.json
+++ b/package.json
@@ -1,25 +1,6 @@
 {
-  "name": "@tarik.djurdjevic/react-sketch",
+  "name": "react-sketch",
   "version": "0.5.6",
-  "description": "Sketch Element for React based applications, backed-up by fabricjs as its core",
-  "keywords": [
-    "react",
-    "canvas",
-    "sketch",
-    "fabricjs",
-    "fabric.js"
-  ],
-  "author": {
-    "name": "Thomas Bolis",
-    "email": "thomas.bolis@gmail.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tbolis/react-sketch.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tbolis/react-sketch/issues"
-  },
   "license": "MIT",
   "main": "./dist",
   "types": "./types/index.d.ts",
